[package]
name = "blurhash-to-css"
version = "0.1.0"
authors = ["Jamie Mason <jamie@foldleft.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dependencies]
blurhash = "0.1.1"
console_error_panic_hook = "0.1.6"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
wasm-bindgen = "=0.2.83"
